Version 1.1 - fixed socials alignment

--- a/styles.css
+++ b/styles.css
@@ -183,6 +183,8 @@ li {
 
 .socials {
 	padding: 2rem 0 1rem 0;
+	display: flex;
+	justify-content: center;
 }
 
 .socials i {
